{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 16,
  "lineage": "ddc4a33a-b6a5-2ff0-832f-1855644145d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb4c991fa89d4b9b",
            "arn": "arn:aws:ec2:us-east-1:217008997731:instance/i-0541b168b508f345d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0541b168b508f345d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088912bd074b4ca8c",
            "private_dns": "ip-172-120-1-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.120.1.189",
            "public_ip": "54.161.200.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00af538052ecfef36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096f92b84924b04f6",
            "tags": {
              "Name": "Terraform instance",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "Terraform instance",
              "env": "Dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001cd47433798d604"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-demo",
            "aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gtw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217008997731:internet-gateway/igw-0296a00cd6950ceb8",
            "id": "igw-0296a00cd6950ceb8",
            "owner_id": "217008997731",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0e3f22bcdd6f70714"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217008997731:route-table/rtb-09ed692121db10085",
            "id": "rtb-09ed692121db10085",
            "owner_id": "217008997731",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0296a00cd6950ceb8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3f22bcdd6f70714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gtw1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015afc786d7751d4b",
            "route_table_id": "rtb-09ed692121db10085",
            "subnet_id": "subnet-096f92b84924b04f6"
          },
          "dependencies": [
            "aws_internet_gateway.gtw1",
            "aws_route_table.rt1",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0157ce5ccedf5b822",
            "route_table_id": "rtb-09ed692121db10085",
            "subnet_id": "subnet-002b9c3b570a08d9e"
          },
          "dependencies": [
            "aws_internet_gateway.gtw1",
            "aws_route_table.rt1",
            "aws_subnet.public_subnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217008997731:security-group/sg-001cd47433798d604",
            "description": "Allow ssh and httpd",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001cd47433798d604",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver-sg-dev",
            "name_prefix": "",
            "owner_id": "217008997731",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "Dev"
            },
            "tags_all": {
              "env": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3f22bcdd6f70714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217008997731:subnet/subnet-050a3f6b926fb6630",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.120.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050a3f6b926fb6630",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217008997731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-vpc",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "subnet-private-vpc",
              "env": "Dev"
            },
            "vpc_id": "vpc-0e3f22bcdd6f70714"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217008997731:subnet/subnet-03e220a18d2a03ae8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.120.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e220a18d2a03ae8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217008997731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-vpc",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "subnet-private-vpc",
              "env": "Dev"
            },
            "vpc_id": "vpc-0e3f22bcdd6f70714"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217008997731:subnet/subnet-096f92b84924b04f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.120.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096f92b84924b04f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "217008997731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-vpc",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "subnet-public-vpc",
              "env": "Dev"
            },
            "vpc_id": "vpc-0e3f22bcdd6f70714"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217008997731:subnet/subnet-002b9c3b570a08d9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.120.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b9c3b570a08d9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "217008997731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-vpc",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "subnet-public-vpc",
              "env": "Dev"
            },
            "vpc_id": "vpc-0e3f22bcdd6f70714"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217008997731:vpc/vpc-0e3f22bcdd6f70714",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.120.0.0/16",
            "default_network_acl_id": "acl-0c1789fd5f6c66277",
            "default_route_table_id": "rtb-0e5fed7c5bf13f3f9",
            "default_security_group_id": "sg-0e0ece8c9043aeb81",
            "dhcp_options_id": "dopt-01234196dbe452a6e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3f22bcdd6f70714",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5fed7c5bf13f3f9",
            "owner_id": "217008997731",
            "tags": {
              "Name": "Terraform-vpc",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "Terraform-vpc",
              "env": "Dev"
            }
          }
        }
      ]
    }
  ]
}